# amphora-engine

./: CMakeLists.txt
include/: amphora.h  amphora_api.def  amphora_api.h  collision.h  error.h  events.h  img.h  input.h  memory.h  mixer.h  particles.h  random.h  render.h  save_data.h  scenes.h  session_data.h  tilemap.h  ttf.h  typewriter.h  util.h
include/internal/: db.h  ht_hash.h  img.h  input.h  particles.h  scenes.h  system.h  tilemap.h  ttf.h  typewriter.h
src/: CMakeLists.txt  amphora.c  collision.c  db.c  error.c  events.c  ht_hash.c  img.c  input.c  lib.c  memory.c  mixer.c  particles.c  prefs.c  random.c  render.c  save_data.c  scenes.c  session_data.c  startup.c  tilemap.c  ttf.c  typewriter.c
